Find licenses in Latest SBOM
